Fixing alignment 🛠️

--- a/signup.css
+++ b/signup.css
@@ -97,7 +97,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: white;
-  padding: 3 0px !important;
+  padding: 30px !important;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
   max-width: 660px !important;
@@ -108,7 +108,7 @@ body {
   width: 100%;
   align-items: end;
   justify-content: left;
-  padding: 20px;
+  padding: 20px 5px;
 }
 
 /* formmating the heading */
